# astroNN

./: .gitignore  4_conv_WL.ipynb  LICENSE  README.md  setup.cfg  setup.py
.ipynb_checkpoints/: 4_conv_WL-checkpoint.ipynb
astronn/: data.py
notebooks/: 1_notmnist.ipynb  1_notmnist_solutions.ipynb  2_fullyconnected.ipynb  2_fullyconnected_solutions.ipynb  config.json  pip-requirements.txt
