[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astronn
description = Neural networks in astronomy
long_description = Neural networks and deep learning in astronomy
author = adrn
author_email = adrn@astro.columbia.edu
license = MIT
url = https://github.com/astroNN/astroNN
edit_on_github = False
github_project = astroNN/astroNN